--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/R.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+            <h4>Why R</h4>
+            <p class="text-muted">6 reasons why to use R for Data Science.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -142,11 +142,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/markdown.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+            <h4>Dynamic Reports</h4>
+            <p class="text-muted">created easily using <pckg>R Markdown</pckg>.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
@@ -156,11 +156,11 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/emoji.png" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+            <h4>Sentiment</h4>
+            <p class="text-muted">Analyse sentiments using <pckg>tidytext</pckg>.</p>
           </div>
         </div>
       </div>
@@ -185,20 +185,15 @@
                 <img class="rounded-circle img-fluid" src="img/courses/1.png" alt="">
               </div>
               <div class="timeline-panel">
+                <a class="course-link" data-toggle="modal" href="#R4DS">
                 <div class="timeline-heading">
                   <h4>R for Data Science</h4>
                   <p class="text-muted" style="margin-bottom:2px;font-size:1.2em"><b>990CHF @ Uni Basel</b></p>
                 </div>
                 <div class="timeline-body">
-                  <a class="course-link" data-toggle="modal" href="#R4DS">
-                  <div class="course-hover">
-                    <div class="course-hover-content">
-                      <i class="fas fa-plus fa-3x"></i>
-                    </div>
-                  </div>
                   <p class="text-muted">Learn how to do data science using R from the ground-up. After the course, you will know how to load data from external files, clean, organise, and explore data, conduct basic statistical analyses and create striking visualisations.</p>
-                  </a>
                 </div>
+                </a>
                 <div class="timeline-dates">
                   <a class="date">Aug 24/25 | Register</a> <a class="pre-date">Nov 9/10 | Preregister</a>
                 </div>
