--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </a>
           <div class="portfolio-caption">
             <h4>Sentiment</h4>
-            <p class="text-muted">Analyse sentiments using <pckg>tidytext</pckg>.</p>
+            <p class="text-muted">Analyse sentiment using <pckg>tidytext</pckg>.</p>
           </div>
         </div>
       </div>
