--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Insights</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Like you, we are students of R and Data Science. In this section, we share some of our insights in the form of small tutorials and useful tips and tricks.</h3>
         </div>
       </div>
       <div class="row">
