--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">We teach R</h2>
-          <h3 class="section-subheading text-muted">We are Switzerland-based data scientists who have jointly spent over 25 years doing data science with R for both research and industry. Our goal is to help you learn the skills needed to discover and communicate insights from data and join the data revolution.</h3>
+          <!---<h3 class="section-subheading text-muted">We are Switzerland-based data scientists who have jointly spent over 25 years doing data science with R for both research and industry. Our goal is to help you learn the skills needed to discover and communicate insights from data and join the data revolution.</h3>--->
+          <p class="text-muted">We are Switzerland-based data scientists who have jointly spent over 25 years doing data science with R for both research and industry. Our goal is to help you learn the skills needed to discover and communicate insights from data and join the data revolution.</p><br><br>
         </div>
       </div>
       <div class="row text-center">
@@ -116,8 +117,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Insights</h2>
-          <h3 class="section-subheading text-muted">Like you, we are students of R and Data Science. In this section, we share some of our insights in the form of small tutorials and useful tips and tricks.</h3>
+          <h2 class="section-heading text-uppercase">Insights</h2><br><br>
+          <!---<h3 class="section-subheading text-muted">Like you, we are students of R and Data Science. In this section, we share some of our insights in the form of small tutorials and useful tips and tricks.</h3>
+          <p class="text-muted">Like you, we are students of R and Data Science. Here, we share some of our insights in the form of small tutorials and useful tips and tricks.</p><br><br>--->
         </div>
       </div>
       <div class="row">
@@ -173,8 +175,13 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Upcoming courses</h2>
+          <!---
           <h3 class="section-subheading text-muted" style="margin:10px;font-size:1.5em"><i>For everyone!</i></h3>
           <h3 class="section-subheading text-muted">Balancing short, interactive presentations and longer hands-on, step-by-step practicals our courses are designed to cater to your specific level and needs, may you be a beginner or advanced data analyst. There will be multiple instructors to ensure that no one gets lost. Feel to contact us, if you have questions, and explore our open materials.</h3>
+          --->
+          <p class="text-muted" style="margin:10px;font-size:1.5em">For everyone!</i></p>
+          <p class="text-muted">Balancing short, interactive presentations and longer hands-on, step-by-step practicals our courses are designed to cater to your specific level and needs, may you be a beginner or advanced data analyst. There will be multiple instructors to ensure that no one gets lost. Please contact us, if you have questions, and explore our open materials.</p><br><br><br>
+
         </div>
       </div>
       <div class="row">
@@ -185,12 +192,17 @@
                 <img class="rounded-circle img-fluid" src="img/courses/1.png" alt="">
               </div>
               <div class="timeline-panel">
-                <a class="course-link" data-toggle="modal" href="#R4DS">
                 <div class="timeline-heading">
                   <h4>R for Data Science</h4>
-                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em"><b>990CHF @ Uni Basel</b></p>
+                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
                 </div>
                 <div class="timeline-body">
+                  <a class="course-link" data-toggle="modal" href="#dirk">
+                  <div class="course-hover">
+                    <div class="course-hover-content">
+                      <i class="fas fa-plus fa-3x"></i>
+                    </div>
+                  </div>
                   <p class="text-muted">Learn how to do data science using R from the ground-up. After the course, you will know how to load data from external files, clean, organise, and explore data, conduct basic statistical analyses and create striking visualisations.</p>
                 </div>
                 </a>
@@ -311,8 +323,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our Team of R Experts</h2>
-          <h3 class="section-subheading text-muted">We have over 25 years of experience with R and contributed our own R packages. Click on our profiles to learn more about each of us.</h3>
+          <h2 class="section-heading text-uppercase">Our R Experts</h2><br><br>
+          <!---<h3 class="section-subheading text-muted">We have over 25 years of experience with R and contributed our own R packages. Click on our profiles to learn more about each of us.</h3>
+          <p class="text-muted">We have over 25 years of experience with R and contributed our own R packages. Click on our profiles to learn more about each of us.</p><br><br>--->
         </div>
       </div>
       <div class="row">
