--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>Statistics with R</h4>
-                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em"><b>990CHF @ Uni Basel</b></p>
+                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
                 </div>
                 <div class="timeline-body">
                   <a class="course-link" data-toggle="modal" href="#dirk">
@@ -242,7 +242,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>Machine Learning with R</h4>
-                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em"><b>990CHF @ Uni Basel</b></p>
+                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
                 <div class="timeline-body">
                   <a class="course-link" data-toggle="modal" href="#dirk">
                   <div class="course-hover">
