--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading text-uppercase">Contact Us</h2><br><br>
+          <!---<h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>--->
         </div>
       </div>
       <div class="row">
