--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">We teach R</h2>
           <!---<h3 class="section-subheading text-muted">We are Switzerland-based data scientists who have jointly spent over 25 years doing data science with R for both research and industry. Our goal is to help you learn the skills needed to discover and communicate insights from data and join the data revolution.</h3>--->
-          <p class="text-muted">We are Switzerland-based data scientists who have jointly spent over 25 years doing data science with R for both research and industry. Our goal is to help you learn the skills needed to discover and communicate insights from data and join the data revolution.</p><br><br>
+          <p class="text-muted">We are Swiss-based data scientists who have jointly spent over 25 years doing data science with R for both research and industry. Our goal is to help you learn the skills needed to discover and communicate insights from data and join the data revolution.</p><br><br>
         </div>
       </div>
       <div class="row text-center">
@@ -179,7 +179,7 @@
           <h3 class="section-subheading text-muted" style="margin:10px;font-size:1.5em"><i>For everyone!</i></h3>
           <h3 class="section-subheading text-muted">Balancing short, interactive presentations and longer hands-on, step-by-step practicals our courses are designed to cater to your specific level and needs, may you be a beginner or advanced data analyst. There will be multiple instructors to ensure that no one gets lost. Feel to contact us, if you have questions, and explore our open materials.</h3>
           --->
-          <p class="text-muted" style="margin:10px;font-size:1.5em">For everyone!</i></p>
+          <p class="text-muted" style="margin:0px;font-size:1.5em">For everyone!</i></p>
           <p class="text-muted">Balancing short, interactive presentations and longer hands-on, step-by-step practicals our courses are designed to cater to your specific level and needs, may you be a beginner or advanced data analyst. There will be multiple instructors to ensure that no one gets lost. Please contact us, if you have questions, and explore our open materials.</p><br><br><br>
 
         </div>
