--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Courses</h4>
-          <p class="text-muted">We offer various courses for everyone interested in starting their journey into Data Science. For more information see <a href="#about"><b>upcoming courses</b></a>.</p>
+          <p class="text-muted">We offer various courses for everyone interested in starting their journey into Data Science. For more information see <a href="#courses"><b>upcoming courses</b></a>.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
