--- a/index.html
+++ b/index.html
@@ -260,11 +260,11 @@
               <div class="timeline-image">
                 <a class="material-link" data-toggle="modal" href="#MLwR">
                 <div class="material-hover material-size">
-                  <div class="material-hover-content">
-                    <i class="fas fa-plus fa-3x"></i>
+                  <div class="material-hover-content plus">
+                    <i class="fas fa-plus fa-2x"></i>
                   </div>
                 </div>
-                <div class="material-size">
+                <div class="mats" style="margin-top:-7px">
                   See our<br>past<br>materials!
                 </div>
                 </a>
