--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <i class="fas fa-code fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Code</h4>
-          <p class="text-muted">We are active R developers and share R's open philosophy. That's why you will find all our materials are <a href=""><b>publicly available</b></a> at all times.</p>
+          <p class="text-muted">We are active R developers and share R's open philosophy. That's why you will find all our materials are <a data-toggle="modal" href="#arxiv"><b>publicly available</b></a> at all times.</p>
         </div>
       </div>
     </div>
@@ -258,7 +258,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <a class="material-link" data-toggle="modal" href="#MLwR">
+                <a class="material-link" data-toggle="modal" href="#arxiv">
                 <div class="material-hover material-size">
                   <div class="material-hover-content plus">
                     <i class="fas fa-plus fa-2x"></i>
@@ -1166,6 +1166,66 @@
                   <li>Client: Finish</li>
                   <li>Category: Identity</li>
                 </ul>
+                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <i class="fas fa-times"></i>
+                  Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--
+  ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE
+  ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE
+  ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE
+  ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE
+  -->
+
+  <!--   ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE ARCHIVE  -->
+  <div class="course-modal modal fade" id="arxiv" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
+                <h4  style="padding:0px;margin:0px">R for Data Science</h4>
+                <p class="item-intro text-muted">Learn Data Science with R from the ground up</p>
+
+                <a class="arxiv" href="https://therbootcamp.github.io/R4DS_2019Feb/">February 2019 | 2-day</a><br>
+                <a class="arxiv" href="https://therbootcamp.github.io/Intro2DataScience_2018Oct/">October 2018 | 2-day</a><br>
+                <a class="arxiv" href="https://therbootcamp.github.io/BaselRBootcamp_2018July">July 2018 | 4-day</a><br>
+                <a class="arxiv" href="https://therbootcamp.github.io/BaselRBootcamp_2018April/schedule">April 2018 | 4-day</a><br>
+
+                <br><br><br>
+
+                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/2.png" alt="">
+                <h4  style="padding:0px;margin:0px">Statistics with R</h4>
+                <p class="item-intro text-muted">Learn to make data-driven decisions with R</p>
+
+                <a class="arxiv" href="https://therbootcamp.github.io/ML_2019May/">May 2019 | 2-day</a><br>
+                <a class="arxiv" href="https://therbootcamp.github.io/appliedML_2019Jan/">January 2019 | 2-day</a><br>
+
+                <br><br><br>
+
+                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/3.png" alt="">
+                <h4  style="padding:0px;margin:0px">Machine Learning with R</h4>
+                <p class="item-intro text-muted">Learn to build predictive algorithms with R</p>
+
+                <a class="arxiv" href="https://therbootcamp.github.io/SwR_2019Apr/">April 2019 | 2-day</a><br>
+
+                <br><br>
+
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
                   Close</button>
