--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                   </a>
                 </div>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189">Sep 7/8 | Register</a>
+                  <a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189#collapsible-heading-anmeldung">Sep 7/8 | Register</a>
                 </div>
               </div>
             </li>
@@ -252,7 +252,7 @@
                   </a>
                 </div>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291">Oct 5/6 | Register</a>
+                  <a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Oct 5/6 | Register</a>
                 </div>
               </div>
             </li>
