--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
   <!-- Custom styles for this template -->
   <link href="css/agency.min.css" rel="stylesheet">
 
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/fav/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/fav/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/fav/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/fav/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/fav/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/fav/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/fav/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/fav/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/fav/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/fav/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/fav/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png">
+  <link rel="manifest" href="/fav/manifest.json">
+
 </head>
 
 <body id="page-top">
@@ -69,7 +85,7 @@
             <a class="nav-link js-scroll-trigger" href="#insights">Insights</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#courses">Bootcamps</a>
+            <a class="nav-link js-scroll-trigger" href="#courses">Courses</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#testimonials">Testimonials</a>
@@ -108,26 +124,32 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
-          </span>
+          <a class="js-scroll-trigger" href="#courses">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
+            </span>
+        </a>
           <h4 class="service-heading">Courses</h4>
-          <p class="text-muted">We offer various courses for everyone interested in starting their journey into Data Science. For more information see <a href="#courses"><b>upcoming courses</b></a>.</p>
+          <p class="text-muted">We offer various courses for everyone interested in starting their journey into Data Science. For more information see <a class="js-scroll-trigger" href="#courses"><b>upcoming courses</b></a>.</p>
         </div>
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
-          </span>
+          <a class="js-scroll-trigger" href="#contact">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
           <h4 class="service-heading">Consulting</h4>
-          <p class="text-muted">Have a Data Science problem? We are here to help. Send us a <a href="#contact"><b>message</b></a> and we will get back to you right away.</p>
+          <p class="text-muted">Have a Data Science problem? We might be able to help. Send us a <a class="js-scroll-trigger" href="#contact"><b>message</b></a> and we will get back to you right away.</p>
         </div>
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-code fa-stack-1x fa-inverse"></i>
-          </span>
+          <a data-toggle="modal" href="#arxiv">
+            <span class="fa-stack fa-4x">
+              <i class="fas fa-circle fa-stack-2x text-primary"></i>
+              <i class="fas fa-code fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
           <h4 class="service-heading">Code</h4>
           <p class="text-muted">We are active R developers and share R's open philosophy. That's why you will find all our materials are <a data-toggle="modal" href="#arxiv"><b>publicly available</b></a> at all times.</p>
         </div>
@@ -216,7 +238,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Upcoming Bootcamps</h2>
+          <h2 class="section-heading text-uppercase">Upcoming courses</h2>
           <!---
           <h3 class="section-subheading text-muted" style="margin:10px;font-size:1.5em"><i>For everyone!</i></h3>
           <h3 class="section-subheading text-muted">Balancing short, interactive presentations and longer hands-on, step-by-step practicals our courses are designed to cater to your specific level and needs, may you be a beginner or advanced data analyst. There will be multiple instructors to ensure that no one gets lost. Feel to contact us, if you have questions, and explore our open materials.</h3>
@@ -302,7 +324,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <a class="material-link" data-toggle="modal" href="#arxiv">
+                <a class="material-link" data-toggle="modal" href="#arxiv" style="text-decoration:none">
                 <div class="material-hover material-size">
                   <div class="material-hover-content plus">
                     <i class="fas fa-plus fa-2x"></i>
@@ -511,41 +533,46 @@
 
   <!-- Contact --->
   <section class="page-section" id="contact">
+    <form action="https://formspree.io/therbootcamp@gmail.com" method="POST" id="Contact_form" name="Contact_form">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2><br><br>
+          <h2 class="section-heading text-uppercase">Contact Us</h2>
+          <font style="top:30px;" class="checkbox">Check to join mailing list <input type="checkbox" name="mailing list"></font><br>
+          <br><br>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12">
 
-          <form action="https://formspree.io/therbootcamp@gmail.com" method="POST" id="Contact_form" name="Contact_form">
             <input type="hidden" name="Form" value="Contact form" />
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input class="form-control" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
+                  <input class="form-control"name="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
+                  <input class="form-control" name="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
                   <p class="help-block text-danger"></p>
                 </div>
+
                 <div class="form-group">
-                  <input class="form-control" id="phone" type="tel" placeholder="Your Phone" data-validation-required-message="Please enter your phone number.">
+                  <input class="form-control" name="phone" type="tel" placeholder="Your Phone" data-validation-required-message="Please enter your phone number.">
                   <p class="help-block text-danger"></p>
                 </div>
+
               </div>
               <div class="col-md-6">
                 <div class="form-group">
-                  <textarea class="form-control" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+                  <textarea class="form-control" name="message" placeholder="Your Message" data-validation-required-message="Please enter a message."></textarea>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
               <div class="clearfix"></div>
 
               <div class="col-lg-12 text-center">
+
                 <div id="success"></div>
                 <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
               </div>
@@ -1464,10 +1491,12 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
+                <h2 class="text-uppercase">Open Materials</h2>
+                <p class="item-intro text-muted"> In the spirit of R's open philosophy, we keep the materials of our courses publicly available. Feel free to explore the materials of our past courses below.</p>
+                <br>
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">R for Data Science</h4>
-                <p class="item-intro text-muted">Learn Data Science with R from the ground up</p>
-
+                <p class="item-intro text-muted" style="margin-bottom:20px"> Learn Data Science with R from the ground up</p>
                 <a class="arxiv" href="https://therbootcamp.github.io/R4DS_2019Feb/">February 2019 | 2-day</a><br>
                 <a class="arxiv" href="https://therbootcamp.github.io/Intro2DataScience_2018Oct/">October 2018 | 2-day</a><br>
                 <a class="arxiv" href="https://therbootcamp.github.io/BaselRBootcamp_2018July">July 2018 | 4-day</a><br>
@@ -1477,7 +1506,7 @@
 
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/2.png" alt="">
                 <h4  style="padding:0px;margin:0px">Statistics with R</h4>
-                <p class="item-intro text-muted">Learn to make data-driven decisions with R</p>
+                <p class="item-intro text-muted" style="margin-bottom:20px">Learn to make data-driven decisions with R</p>
 
                 <a class="arxiv" href="https://therbootcamp.github.io/SwR_2019Apr/">April 2019 | 2-day</a><br>
 
@@ -1485,7 +1514,7 @@
 
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/3.png" alt="">
                 <h4  style="padding:0px;margin:0px">Machine Learning with R</h4>
-                <p class="item-intro text-muted">Learn to build predictive algorithms with R</p>
+                <p class="item-intro text-muted" style="margin-bottom:20px">Learn to build predictive algorithms with R</p>
 
                 <a class="arxiv" href="https://therbootcamp.github.io/ML_2019May/">May 2019 | 2-day</a><br>
                 <a class="arxiv" href="https://therbootcamp.github.io/appliedML_2019Jan/">January 2019 | 2-day</a><br>
